objects/AgileVizArt__Team_Member__c.object
<CustomObject>
    <description>Defines all team members of a project</description>
    <fields>
        <fullName>AgileVizArt__Company__c</fullName>
        <formula>IF(ISBLANK(AgileVizArt__Contact__c), AgileVizArt__User__r.CompanyName, HYPERLINK(&quot;/&quot; &amp;  AgileVizArt__Contact__r.AccountId, AgileVizArt__Contact__r.Account.Name, &quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Memberships</relationshipLabel>
        <relationshipName>Project_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Nick_Name__c</fullName>
        <inlineHelpText>Enter a maximum nick name of 3-4 digits</inlineHelpText>
        <label>Nick Name</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Project__c</fullName>
        <label>Project</label>
        <referenceTo>AgileVizArt__Project__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Role_Type__c</fullName>
        <inlineHelpText>Enter a type of role</inlineHelpText>
        <label>Role Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Champion</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Project Lead</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
                <value>
                    <fullName>Steering Committee Member</fullName>
                </value>
                <value>
                    <fullName>Team Lead</fullName>
                </value>
                <value>
                    <fullName>Technical Architect</fullName>
                </value>
                <value>
                    <fullName>Senior Business Analyst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgileVizArt__Role__c</fullName>
        <inlineHelpText>Enter a descriptive role name</inlineHelpText>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Team_Member__c</fullName>
        <formula>IF(ISBLANK(AgileVizArt__Contact__c),  HYPERLINK(&quot;/&quot; &amp; AgileVizArt__User__c, AgileVizArt__User__r.FirstName &amp; &quot; &quot; &amp; AgileVizArt__User__r.LastName, &quot;_parent&quot;),  HYPERLINK(&quot;/&quot; &amp; AgileVizArt__Contact__c, AgileVizArt__Contact__r.FirstName &amp; &quot; &quot; &amp; AgileVizArt__Contact__r.LastName, &quot;_parent&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__Unique_Nick_Name__c</fullName>
        <label>Unique Nick Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AgileVizArt__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgileVizArt__View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IMAGE(&quot;/img/icon/tasks16.gif&quot;,&quot;View&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <displayFormat>TM-{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <recordTypes>
        <fullName>AgileVizArt__Contact</fullName>
        <active>true</active>
        <description>Used to add project team members without salesforce.com user account</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>AgileVizArt__User</fullName>
        <active>true</active>
        <description>Used to add project team members with salesforce.com user account</description>
        <label>User</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>